refactor(powerline): 移除预览组件并简化路线面板布局
- 删除 PowerLineOverviewRenderer 中