@@ -48,7 +48,6 @@ public final class PowerLineOverviewRenderer {
             Collection<String> selectedLineIds,
             Consumer<String> onLineSelected,
             ICoordinateService coordinates) {
-        PowerLineUiWidgets.text(PlotI18n.tr("plugin.powerline.overview_map"));
         float mapWidth = ImGui.getContentRegionAvail().x;
         float mapHeight = mapHeightForWidth(mapWidth);
         ImGui.beginChild("powerline_overview_map", 0, mapHeight, true);
@@ -128,47 +127,6 @@ public final class PowerLineOverviewRenderer {
         return ImGui.isItemClicked(0);
     }
 
-    public static float thumbnailWidth() {
-        return THUMBNAIL_WIDTH;
-    }
-
-    public static float thumbnailHeight() {
-        return THUMBNAIL_HEIGHT;
-    }
-
-    /** 单条线路路径预览：宽度占满可用区域，高度按画布比例计算。 */
-    public static void renderLinePathPreview(
-            PowerLineFootprint line,
-            ICoordinateService coordinates) {
-        if (line == null || line.getPathPoints().size() < 2) {
-            return;
-        }
-
-        float mapWidth = ImGui.getContentRegionAvail().x;
-        float mapHeight = mapHeightForWidth(mapWidth);
-        ImGui.beginChild("powerline_route_path_preview", 0, mapHeight, true);
-
-        float width = ImGui.getContentRegionAvail().x;
-        float height = ImGui.getContentRegionAvail().y;
-        if (width < 1f || height < 1f) {
-            ImGui.endChild();
-            return;
-        }
-
-        ImVec2 origin = ImGui.getCursorScreenPos();
-        ImDrawList drawList = ImGui.getWindowDrawList();
-        drawList.addRectFilled(origin.x, origin.y, origin.x + width, origin.y + height, PluginUiColors.MAP_BG);
-        drawList.addRect(origin.x, origin.y, origin.x + width, origin.y + height, PluginUiColors.PANEL_BORDER);
-
-        Bounds bounds = computeBounds(List.of(line));
-        MapViewport viewport = buildViewport(bounds, origin.x, origin.y, width, height);
-        drawLinePath(drawList, line, viewport, PluginUiColors.ACCENT_BLUE, true);
-        drawPoles(drawList, line, viewport, true, coordinates);
-
-        ImGui.dummy(width, height);
-        ImGui.endChild();
-    }
-
     private static void drawLinePath(
             ImDrawList drawList,
             PowerLineFootprint line,
@@ -186,7 +144,7 @@ public final class PowerLineOverviewRenderer {
         if (line.isClosedLoop() && points.size() >= 3) {
             drawSegment(
                 drawList,
-                points.get(points.size() - 1),
+                points.getLast(),
                 points.getFirst(),
                 viewport,
                 color,
@@ -342,7 +300,7 @@ public final class PowerLineOverviewRenderer {
                 double dist = distancePointToSegment(
                     wx,
                     wy,
-                    points.get(points.size() - 1),
+                    points.getLast(),
                     points.getFirst());
                 if (dist < closestDist) {
                     closestDist = dist;
